--- a/like.html
+++ b/like.html
@@ -22,3 +22,6 @@
 
 </body>
 </html>
+
+
+<p>In React, lifecycle methods are special functions in class components that get called at different stages of a component’s existence — from creation (mounting), updates, and finally unmounting.</p>
