--- a/like.html
+++ b/like.html
@@ -25,3 +25,5 @@
 
 
 <p>In React, lifecycle methods are special functions in class components that get called at different stages of a component’s existence — from creation (mounting), updates, and finally unmounting.</p>
+
+<b>Would you like a diagram or example code comparing class vs functional lifecycle next</b>
